Use FieldMissingException is useFieldMissingException is enabled